Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-47908

Speculative authentication fails for sharded clusters

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 4.4.0-rc4, 4.7.0
    • Affects Version/s: 4.4.0-rc0
    • Component/s: None
    • None
    • Minor Change
    • ALL
    • v4.4
    • Security 2020-05-18
    • 18

      When trying to speculatively authenticate against a >=4.4 rc0 sharded cluster, speculative authentication appears to fail.

      Reproed with .NET against
      mongodb-linux-x86_64-enterprise-ubuntu1804-4.4.0-rc0-17-g1a414c9 and
      Also reproed by divjot.arora using Go against 4.5.0-980-g81d53a7

      Command log:

      {"isMaster": {"$numberInt":"1"},"compression": [],"client": {"driver": {"name": "mongo-go-driver","version": "v1.4.0+prerelease"},"os": {"type": "darwin","architecture": "amd64"},"platform": "go1.13.1"}}
      
      {"ismaster": true,"msg": "isdbgrid","topologyVersion": {"processId": {"$oid":"5eac9d05bf2d1bb6da2e964c"},"counter": {"$numberLong":"0"}},"maxBsonObjectSize": {"$numberInt":"16777216"},"maxMessageSizeBytes": {"$numberInt":"48000000"},"maxWriteBatchSize": {"$numberInt":"100000"},"localTime": {"$date":{"$numberLong":"1588370772135"}},"logicalSessionTimeoutMinutes": {"$numberInt":"30"},"connectionId": {"$numberInt":"44"},"maxWireVersion": {"$numberInt":"10"},"minWireVersion": {"$numberInt":"0"},"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      {"isMaster": {"$numberInt":"1"},"speculativeAuthenticate": {"saslStart": {"$numberInt":"1"},"mechanism": "SCRAM-SHA-1","payload": {"$binary":{"base64":"biwsbj11c2VyLHI9NncwbjlxVnlaQlhEZVFNbzVEcURDbE5RcWlMOHZxUzE=","subType":"00"}},"db": "admin","options": {"skipEmptyExchange": true}},"compression": [],"client": {"driver": {"name": "mongo-go-driver","version": "v1.4.0+prerelease"},"os": {"type": "darwin","architecture": "amd64"},"platform": "go1.13.1"}}
      
      {"ismaster": true,"msg": "isdbgrid","topologyVersion": {"processId": {"$oid":"5eac9d05bf2d1bb6da2e964c"},"counter": {"$numberLong":"0"}},"maxBsonObjectSize": {"$numberInt":"16777216"},"maxMessageSizeBytes": {"$numberInt":"48000000"},"maxWriteBatchSize": {"$numberInt":"100000"},"localTime": {"$date":{"$numberLong":"1588370772137"}},"logicalSessionTimeoutMinutes": {"$numberInt":"30"},"connectionId": {"$numberInt":"45"},"maxWireVersion": {"$numberInt":"10"},"minWireVersion": {"$numberInt":"0"},"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      {"saslStart": {"$numberInt":"1"},"mechanism": "SCRAM-SHA-1","payload": {"$binary":{"base64":"biwsbj11c2VyLHI9RHNUUys5MnJFaXJVUVFXamtHT0c0Ri9HeEFZTHZ0Y2c=","subType":"00"}},"options": {"skipEmptyExchange": true},"$db": "admin"}
      
      {"conversationId": {"$numberInt":"1"},"done": false,"payload": {"$binary":{"base64":"cj1Ec1RTKzkyckVpclVRUVdqa0dPRzRGL0d4QVlMdnRjZ25XVzJIbGZuYnpRUVJZNUNpWHgvcjllVVpIYjlRajR1LHM9M0xYSFczTkFTaEgxZUJUK1NVSnVZZz09LGk9MTAwMDA=","subType":"00"}},"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      {"saslContinue": {"$numberInt":"1"},"conversationId": {"$numberInt":"1"},"payload": {"$binary":{"base64":"Yz1iaXdzLHI9RHNUUys5MnJFaXJVUVFXamtHT0c0Ri9HeEFZTHZ0Y2duV1cySGxmbmJ6UVFSWTVDaVh4L3I5ZVVaSGI5UWo0dSxwPUlMUTdKb0JPOGZoY095Nm5TcVI5d3BxMFQvOD0=","subType":"00"}},"$db": "admin"}
      
      {"conversationId": {"$numberInt":"1"},"done": true,"payload": {"$binary":{"base64":"dj1aMCtNandLK3I2ZS9kMGtob1FzaE9wNktHdm89","subType":"00"}},"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      {"ping": {"$numberInt":"1"},"lsid": {"id": {"$binary":{"base64":"EEABCbQnRKOEbW2I+jyA+Q==","subType":"04"}}},"$db": "admin"}
      
      {"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      {"endSessions": [{"id": {"$binary":{"base64":"EEABCbQnRKOEbW2I+jyA+Q==","subType":"04"}}}],"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}},"$db": "admin"}
      
      {"ok": {"$numberDouble":"1.0"},"operationTime": {"$timestamp":{"t":"1588370766","i":"1"}},"$clusterTime": {"clusterTime": {"$timestamp":{"t":"1588370766","i":"1"}},"signature": {"hash": {"$binary":{"base64":"EKKlBT/gY+3jo1tpsYO95xbrMME=","subType":"00"}},"keyId": {"$numberLong":"6821999926956785668"}}}}
      
      

            Assignee:
            sara.golemon@mongodb.com Sara Golemon
            Reporter:
            vincent.kam@mongodb.com Vincent Kam (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: