SERVER-47908 Wire speculativeAuthenticate into mongos